[package]
name = "lazyfinder"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
clap = { version = "3.0.14", features = ["derive"] }
colored = "2.0.0"
regex = "1"
lazy_static = "1.4.0"